--- a/Content/Styles/Frames/Site.scss
+++ b/Content/Styles/Frames/Site.scss
@@ -28,7 +28,7 @@ $hamburger: '\f0c9';
     padding: 0px;
 }
 
-.spanish>p, .english>p, .spanish>ul, .english>ul, .spanish>h2, .english>h2 {
+.spanish>p, .english>p, .spanish>ul, .english>ul, .spanish>h2, .english>h2,.spanish>div, .english>div, {
     margin: 20px;
 }
 
@@ -45,10 +45,11 @@ $hamburger: '\f0c9';
 }
 
 .questionNumber {
-    margin-top: 4px;
+    margin-top: 5px;
     height: 30px;
     width: 60px;
     padding-top: 4px;
+    padding-left: 1px;
     text-align: center;
     font-size: 20px;
     background-color:lightgray;
@@ -78,14 +79,15 @@ $hamburger: '\f0c9';
 
 .thePassage {
     width: 40%;
+    padding-right: 0px;
+    margin-left: 0px;
     border-right: 1px solid #d0d0d0;
-    padding-right: 50px;
     @extend %passage-question-shared;
 }
 
 .thePassage::before {
     @include symbol(27px, $hamburger);
-    right: -30px;
+    right: 30px;
 }
 
 .theQuestions {
@@ -111,12 +113,12 @@ $hamburger: '\f0c9';
 }
 
 .spanish::before {
-    content:"Español";
+    content:"ESPAÑOL";
     @extend %spanish-english-before;
 }
 
 .english::before {
-    content:"English";
+    content:"ENGLISH";
     @extend %spanish-english-before;
 }
 
@@ -170,3 +172,4 @@ input[type="text"] {
     border: 1px solid black;
     border-radius: 5px;
 }
+
