--- a/Content/Styles/Toggle/Site.scss
+++ b/Content/Styles/Toggle/Site.scss
@@ -119,3 +119,6 @@ input[type="text"]{
     left:600px;
     width: 220px;
 }
+table{
+    width: 80%;
+}
